--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
       font-family: monospace;
       padding: 20px;
       overflow-y: auto;
+      font-size: 18px;
+    }
+    h1 {
+      font-size: 24px;
     }
     .log-line {
       margin: 5px 0;
     }
-    .red { color: red; }
+    .red {
+      color: red;
+    }
   </style>
 </head>
 <body>
