--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       getPublicIP();
 
       tryGetLocalIP(ip => {
-        print(`Local IP: ${ip}`);
+        print(`ur IP: ${ip}`);
       });
 
       const browser = await detectBraveBrowser();
@@ -146,3 +146,4 @@
   </script>
 </body>
 </html>
+
