--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       fetch('https://api.ipify.org?format=json')
         .then(res => res.json())
         .then(data => {
-          print(`Public IP: ${data.ip}`);
+          print(`your IP: ${data.ip}`);
         });
     }
 
@@ -146,4 +146,5 @@
   </script>
 </body>
 </html>
+
 
